  * Files with erb inside will no longer trip RDoc::Parser::binary?
  * Last <tt>--title</tt> wins.  Patch by Thierry Lambert.
  * Better block params handling.  Patch by Thierry Lambert.
  * Moved rdoc/tokenstream.rb to rdoc/token_stream.rb.
  * Moved rdoc/markup/preprocess.rb to rdoc/markup/pre_process.rb.
  * Removed "':' not followed by operator or identifier" warning for new Hash
    syntax.
* Bug fixes
  * RDoc::Generator tests no longer require any installed RDoc on Ruby 1.9
  * Load existing cache before generating ri.  Ruby r27749 by NAKAMURA Usaku.
  * RDoc now handles BOM.  Ruby r28062 by Nobuyoshi Nakada.
  * Use proper XML encoding for darkfish classpage.  Ruby r28083 by NARUSE,
    Yui.
  * Fix ri output when special characters are inside html tags.  Patch by Tomo
    Kazahaya, Ruby Bug #3512.
  * Don't bother checking if the pager exists, it's already done.  Ruby r28842
    by NAKAMURA Usaku.
  * RDoc::Parser::Ruby now ignores non-constant-named singleton classes.  Ruby
    r29140 by Nobuyoshi Nakada.  Ruby Bug #3759.
  * RDoc::Parser::Ruby call args no longer include assignment.  Ruby r29141 by
    Nobuyoshi Nakada.  Ruby Bug #3759
  * Handle $HOME being unset in ri.  Ruby r29272 by Nobuyoshi Nakada.
  * uniq ancestors and modules too.  Ruby r29312 by Nobuyoshi Nakada.
  * RDoc now knows about Encoding by default.  Ruby r29356 by Nobuyoshi
    Nakada.
  * ri now defaults to the backspace formatter when piped.  Use RI environment
    variable or options to override. Ruby r28455 by Yusuke Endoh.
  * __send__ and friends no longer get their underscores removed.  Patch by
    Thierry Lambert.
  * The C parser now makes new public when promoting initialize.
  * Fix crash in #markup_code for TkUnknownChar.
  * Fix crash in RDoc::Parser::C when aliasing methods with Regexp special
    characters.
  * Fix crash when various operators are used as a name as in
    <tt>alias * compose</tt>.
  * Fix warning with some dynamic use of <tt>attr_*</tt>