@@ -52,6 +52,7 @@
   * Moved rdoc/markup/preprocess.rb to rdoc/markup/pre_process.rb.
   * Removed "':' not followed by operator or identifier" warning for new Hash
     syntax.
+  * rb_attr() is now supported for attributes.
 * Bug fixes
   * RDoc::Generator tests no longer require any installed RDoc on Ruby 1.9
   * Load existing cache before generating ri.  Ruby r27749 by NAKAMURA Usaku.
